ANode/test/data/SMSHOME2/bad/bad12.ecf
sleep %SLEEPTIME # test for uneven number for microcharacter's with comments, start of line
                 # this is different to bad9.ecf